# password_manager

./: .gitignore  Dockerfile  README.md  pas.py  pyproject.toml  realise.sh  requirements.txt  setup.py  store.json
.github/workflows/: ci.yml
src/: main.py  pas.py
src/cli/: app.py
src/cli/commands/: add.py  delete.py  edit.py  export_cmd.py  find.py  get.py  import_cmd.py  list_cmd.py  master_cmd.py  others_cmd.py  session_cmd.py
src/core/: services.py
src/pas_app/: config.py  exceptions.py  main.py
src/pas_app/adapters/: console.py  promt_gui.py  promts.py
src/pas_app/cli/: app.py
src/pas_app/cli/commands/: add.py  copy_cmd.py  create_secret_key.py  delete.py  export_cmd.py  find.py  get.py  import_cmd.py  list_cmd.py  master_cmd.py  session_cmd.py
src/pas_app/cli/commands/api_commands/: __init__.py  api_typer.py  backups.py  backups_stats.py  change_password.py  delete_cmd.py  download_cmd.py  login_cmd.py  register_cmd.py  upload_cmd.py
src/pas_app/cli/commands/config_commands/: bot_token.py  config_typer.py  default_user.py  session_cmd.py  url.py
src/pas_app/cli/commands/pas_commands/: add.py  check_password_strength.py  configure_config.py  edit.py  (+12 more)
src/pas_app/core/: api.py  crypto.py  keyring.py  logger.py  services.py
src/pas_app/schemas/: api.py  jwt.py  passwords.py  state.py
src/pas_app/services/: file_utils.py  password.py
tests/: conftest.py
tests/api_tests/: login_test.py  register_test.py  upload_test.py
tests/cli_tests/: add_test.py
tests/unit_tests/: config_test.py  crypto_test.py  load_data_test.py  user_vault_test.py
(+3 files in other folders)
