[project]
name = "password-manager"
version = "0.1.0"
description = "CLI password manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "build>=1.4.0",
    "cffi==2.0.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.3",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "pycparser==2.23",
    "pygments==2.19.2",
    "pyperclip==1.11.0",
    "rich==14.2.0",
    "shellingham==1.5.4",
    "tabulate==0.9.0",
    "typer==0.20.0",
    "typing-extensions==4.15.0",
]

[project.scripts]
pas = "pas_app.main:app"

